<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">


    <GridLayout
        android:id="@+id/config_game_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_waiting_queue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.00"
                android:text="@string/waiting_queue"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.00"
                android:visibility="visible" />

            <Button
                android:id="@+id/config_game_progress_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_weight="0.00"
                android:text="@string/cancel_button" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:id="@+id/layout_config"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_config_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_game_name_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/game_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edit_text_game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:labelFor="@id/edit_text_game_name"
                android:maxLines="1"
                android:inputType="text" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_config_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_view_game_description_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.05"
                android:gravity="start|center_vertical"
                android:text="@string/game_description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edit_text_game_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.59"
                android:gravity="start"
                android:inputType="text"
                android:labelFor="@+id/edit_text_game_description"
                android:maxLines="1" />


        </LinearLayout>

        <Button
            android:id="@+id/button_create_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/create_new_game"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
